--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -24,6 +24,11 @@
   weight = 40
 
 [[main]]
+  name = "Conferences"
+  url = "#publications"
+  weight = 20
+   
+[[main]]
   name = "Courses"
   url = "courses/"
   weight = 50
