--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -28,10 +28,10 @@
   url = "#publications"
   weight = 20
    
-#[[main]]
-#  name = "Courses"
-#  url = "courses/"
-#  weight = 50
+[[main]]
+  name = "Experience"
+  url = "#experience/"
+  weight = 50
 
 [[main]]
   name = "Contact"
