--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -81,12 +81,12 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", content_dir 
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "chansigupta.arya@gmail.com"
+email = "sumitgupta.arya@gmail.com"
 phone = ""
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "Amity University", city = "Noida", region = "Uttar Pradesh", postcode = "201301", country = "India", country_code = "IN"}
+address = {street = "Grand Ajnara Heritage, Sector 74", city = "Noida", region = "Uttar Pradesh", postcode = "201301", country = "India", country_code = "IN"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
