--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -81,12 +81,12 @@ edit_page = {repo_url = "https://github.com/gcushen/hugo-academic", content_dir 
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "chansigupta.arya@gmail.com"
-phone = ""
+email = "sumitgupta.arya@gmail.com"
+phone = "9718228422"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "Amity University", city = "Noida", region = "Uttar Pradesh", postcode = "201301", country = "India", country_code = "IN"}
+address = {street = "Grand Ajnara Heritage", city = "Noida", region = "Uttar Pradesh", postcode = "201301", country = "India", country_code = "IN"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
@@ -98,7 +98,7 @@ coordinates = {latitude = "28.546506", longitude = "77.333081"}
 # Office hours
 # A list of your office hours. To remove, set to an empty list `[]`.
 #office_hours = ["Monday 10:00 to 13:00", "Wednesday 09:00 to 10:00"]
-office_hours = "Monday-Friday 09:00 AM to 06:00 PM"
+office_hours = "Monday-Saturday 09:00 AM to 06:00 PM"
 
 # Enter an optional link for booking appointments (e.g. calendly.com).
 # appointment_url = "https://calendly.com"
