--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -18,6 +18,11 @@
 #  url = "#projects"
 #  weight = 30
 
+[[main]]
+  name = "Certifications"
+  url = "#accomplishments.md"
+  weight = 40
+
 #[[main]]
 #  name = "Publications"
 #  url = "#featured"
